--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>國立科技高中─校園社團介紹網123456789</title>
+	<title>國立科技高中─123校園社團介紹網123456789</title>
 	<style type="text/css">
 		#main {
 			margin: auto;
